# marketpower2

./: .gitignore  README.md  TODO.txt  all.bat  commit.bat  doc.bat  exp_runner.py  exp_runner_check.py  exp_runner_surviving.py  interbank.py  interbank_lenderchange.py  interbank_log.py  interbank_old.py  interbank_statistics.py  interbank_testclass.py  interbank_web.py  pyproject.toml  run_exp_min_p_0_1_clean.bat
doc/: README.out  README.tex  algorithm_source.tex  balance.xlsx  erdos_interbank_contagion (1).pptx  erdos_interbank_contagion.pptx  experiment.tex  experiments2.nav  experiments2.out  experiments2.tex  experiments2.toc  experiments3.tex  experiments4.tex  experiments5.nav  experiments5.out  experiments5.tex  experiments5.toc  experiments6.tex  gen_0906.py  gen_experiments34.py  gen_experiments4.py  gen_experiments5.py  gen_experiments6.py
experiments/: _resume_p0122.py  exp_0surviving_4.py  exp_average.py  exp_mc.py  exp_mc500_only.py  exp_mc_300.py  exp_mc_300_500.py  exp_mc_400.py  exp_mc_500.py  exp_min_p_0_01.py  exp_min_p_0_012.py  exp_min_p_0_01_normalize.py  exp_min_p_0_01_robust.py  exp_min_p_0_01_robust2.py  exp_min_p_0_01b.py  exp_min_p_0_1.py  exp_min_p_0_1_normalize.py  exp_min_p_0_1_robust.py  exp_min_p_0_1_robust2.py  exp_min_p_0_1b.py  exp_surviving_4.py  exp_sysrisk.py
slides/: BEAMER.nav  BEAMER.out  BEAMER.snm  BEAMER.tex  BEAMER.toc  BEAMER_doc.tex  BEAMER_doc_footline.tex  BEAMER_notes.tex  BEAMER_p.tex  Makefile  content.old1.tex  content.tex  presentacion.nav  presentacion.out  presentacion.snm  presentacion.tex  presentacion.toc  (+4 more)
(+25 files in other folders)
