[project]
name = "uv"
version = "0.1.0"
description = "econo-ml: Reinforce Learning Policy Recommendation for Interbank Network Stability"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0.0",
    "lxml>=6.1.0",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "progress>=1.6.1",
    "scipy>=1.17.1",
]
